# test-nixspace-lambda-hello-world

./: default.nix  flake.nix  pyproject.toml
lambda_hello_world/: index.py
tests/: test_handler.py
