[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda_hello_world"
version = "1.0.0"
authors = [
  {name = "Chad Crawford", email = "chad@cacrawford.org"}
]
description = "Sample lambda"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "numpy"
]

[project.optional-dependencies]
test = ["pytest"]
typing = ["mypy"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["lambda_hello_world", "tests"]
